--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@600&display=swap');
+/* .App {
   text-align: center;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -22,17 +17,39 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+body {
+  background-color: #FFFCFF;
+}
+.home-header {
+  background-color: #39375B;
+  color: #FFFCFF;
+  font-family: 'Raleway', sans-serif;
+  
+}
+.h1-header{
+  margin-top: 0;
+  padding: 3vh;  
 }
 
-.App-link {
-  color: #61dafb;
+.home-footer{
+display: flex;
+background-color: #745C97 ;
+color: #FFFCFF;
+padding: 3vh;
+flex-direction:column;
+font-family: 'Lato', sans-serif;
+position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.links{
+  background-color: transparent;
+  width: 7vh;
+  margin-right: 3vh
+}
+.title-footer{
+margin-bottom: 0;
 }
