--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@ font-family: 'Lato', sans-serif;
 .title-footer{
 margin-bottom: 0;
 }
+.container-pics{
+  margin-left: 10vh;
+  margin-right: 10vh;
+
+
+
+}
