--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,25 @@ body {
   background-color: #FFFCFF;
 }
 .home-header {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+}
+
+header {
   background-color: #39375B;
   color: #FFFCFF;
   font-family: 'Raleway', sans-serif;
-  
+  padding: 3vh;
 }
+
 .h1-header{
-  margin-top: 0;
-  padding: 3vh;  
+  margin: 0;
+  padding-bottom: 0;
+}
+
+.p-header{
+  margin: 0;
 }
 
 .home-footer{
@@ -22,18 +33,21 @@ padding: 3vh;
 flex-direction:column;
 font-family: 'Lato', sans-serif;
 }
+
 .links{
   background-color: transparent;
   width: 7vh;
   margin-right: 3vh
 }
+
 .title-footer{
 margin-bottom: 0;
 }
+
 .container-pics{
-  margin-left: 10vh;
-  margin-right: 10vh;
+  margin: 8vh;
+}
 
-
-
+.left-header{
+font-style: italic; 
 }
