--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ margin-bottom: 0;
 }
 
 .container-pics{
-  background: #b4deff; 
+  background: #cbd4c266;  
   padding: 5%; 
   border-radius: 1%;
   width: 85vw;
